infra/config/cilium/Gateway-hubble.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: hubble
  namespace: cilium
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    external-dns.alpha.kubernetes.io/hostname: hubble.k8sdev.cloud
spec:
  gatewayClassName: cilium
  listeners:
  - protocol: HTTPS
    port: 443
    name: hubble-https
    hostname: hubble.k8sdev.cloud
    tls:
      mode: Terminate
      certificateRefs:
      - name: hubble-tls
    allowedRoutes:
      namespaces:
        from: Same
