infra/config/cilium/HTTPRoute-hubble.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble
  namespace: cilium
spec:
  parentRefs:
  - name: hubble
    namespace: cilium
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: hubble-ui
      port: 80
  hostnames:
  - hubble.k8sdev.cloud
